| Bug #58825 | segv in lock_remove_recovered_trx_record_locks() in DROP TABLE | ||
|---|---|---|---|
| Submitted: | 8 Dec 2010 17:55 | Modified: | 19 Jan 2011 0:15 |
| Reporter: | Mikhail Izioumtchenko | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: InnoDB storage engine | Severity: | S2 (Serious) |
| Version: | 5.6 | OS: | Any |
| Assigned to: | Sunny Bains | CPU Architecture: | Any |
[8 Dec 2010 17:55]
Mikhail Izioumtchenko
[22 Dec 2010 21:31]
Bugs System
Pushed into mysql-trunk 5.6.1 (revid:alexander.nozdrin@oracle.com-20101222212842-y0t3ibtd32wd9qaw) (version source revid:alexander.nozdrin@oracle.com-20101222212842-y0t3ibtd32wd9qaw) (merge vers: 5.6.1) (pib:24)
