Fix Bug #58825 - segv in lock_remove_recovered_trx_record_locks() in DROP TABLE

Save the next node before calling lock_rec_discard.

Approved over IM by Inaam Rana.